# emotion-vectors

./: .gitignore  0 - Introduction and Table of Contents.txt  1 - Identifying and validating emotion concept representations.txt  2 - Detailed characterization of emotion concept representations.txt  3 - Appendix.txt  README.md  analyze_clustering.py  analyze_layer_rotation.py  analyze_pc_layer_similarity.py  analyze_pc_logit_lens.py  analyze_pca.py  analyze_rotation_composition.py  analyze_rsa.py  analyze_shared_axes_rotation.py  analyze_similarity.py  apply_pca_denoising.py  emotions.txt  extract_activations.py  extract_pca_vectors.py  generate_neutral_dialogues.py  generate_stories.py  prompts_1k_dsv3_100_claude_refusal.csv  pyproject.toml  topics.txt
.claude/: settings.local.json
emotion_vectors/: emotion_vectors_layer_0.npz  emotion_vectors_layer_1.npz  emotion_vectors_layer_10.npz  emotion_vectors_layer_11.npz  emotion_vectors_layer_12.npz  emotion_vectors_layer_13.npz  emotion_vectors_layer_14.npz  emotion_vectors_layer_15.npz  emotion_vectors_layer_16.npz  emotion_vectors_layer_17.npz  emotion_vectors_layer_18.npz  emotion_vectors_layer_19.npz  emotion_vectors_layer_2.npz  emotion_vectors_layer_20.npz  emotion_vectors_layer_21.npz  emotion_vectors_layer_22.npz  emotion_vectors_layer_23.npz  emotion_vectors_layer_24.npz  emotion_vectors_layer_25.npz  emotion_vectors_layer_26.npz  emotion_vectors_layer_27.npz  emotion_vectors_layer_28.npz  emotion_vectors_layer_29.npz  emotion_vectors_layer_3.npz  emotion_vectors_layer_30.npz  emotion_vectors_layer_31.npz  (+10 more)
(+17317 files in other folders)
