[project]
name = "emotions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "gradio>=6.12.0",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "scipy",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "umap-learn>=0.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
